# jugar

./: .clippy.toml  .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  book.toml  deny.toml  pmat.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: book.yml  ci.yml  pmat-quality.yml
.pmat/: baseline.json  project.toml
.pmat-metrics/: commit-8bb1905-meta.json
book/src/: SUMMARY.md  introduction.md
book/src/crates/: jugar-ai.md  jugar-audio.md  jugar-core.md  jugar-input.md  jugar-physics.md  jugar-procgen.md  jugar-render.md  jugar-ui.md  jugar-web.md  jugar-yaml.md  jugar.md  overview.md
book/src/examples/: physics-sandbox.md  pong.md  running.md
book/src/guide/: architecture.md  batuta-stack.md  first-game.md  installation.md  quick-start.md  toyota-way.md  wasm-build.md  zero-js.md
book/src/reference/: api.md  contributing.md  makefile.md  quality.md
crates/jugar/: Cargo.toml
crates/jugar-ai/: Cargo.toml
crates/jugar-ai/src/: lib.rs  system.rs
crates/jugar-apr/: Cargo.toml
crates/jugar-apr/src/: error.rs  format.rs  lib.rs  metadata.rs  model.rs
crates/jugar-audio/: Cargo.toml
crates/jugar-audio/src/: lib.rs
crates/jugar-core/: Cargo.toml
crates/jugar-core/benches/: game_loop.rs
crates/jugar-core/src/: components.rs  ecs.rs  game_loop.rs  introspection.rs  lib.rs
crates/jugar-input/: Cargo.toml
crates/jugar-input/src/: lib.rs
crates/jugar-physics/: Cargo.toml
crates/jugar-physics/src/: lib.rs
crates/jugar-probar/: Cargo.toml
crates/jugar-probar-derive/: Cargo.toml
crates/jugar-probar-derive/src/: lib.rs
crates/jugar-probar/src/: lib.rs  locator.rs  runtime.rs  visual_regression.rs
crates/jugar-procgen/: Cargo.toml
crates/jugar-procgen/src/: lib.rs
crates/jugar-render/: Cargo.toml
crates/jugar-render/src/: lib.rs
crates/jugar-ui/: Cargo.toml
crates/jugar-ui/src/: lib.rs
crates/jugar-web/: Cargo.toml
crates/jugar-web/examples/: load_test.rs
crates/jugar-web/proptest-regressions/: time.txt
crates/jugar-web/src/: ai.rs  audio.rs  compute.rs  demo.rs  input.rs  juice.rs  lib.rs  loadtest.rs  platform.rs  render.rs  simd.rs  simulation.rs  simulation_tests.rs  time.rs  trace.rs
crates/jugar-web/tests/: chaos.rs  integration.rs  probar_pong.rs  proptest_game.rs
crates/jugar-yaml/: Cargo.toml
crates/jugar-yaml/examples/: live_preview.rs
crates/jugar-yaml/src/: accessibility.rs  compiler.rs  error.rs  lib.rs  migration.rs  preview.rs  privacy.rs  safety.rs  sandbox.rs  scaffolding.rs  schema.rs  scripting.rs  sharing.rs  tutorial.rs  vocabulary.rs
crates/jugar-yaml/templates/: catch-stars.yaml  maze.yaml  pong.yaml
crates/jugar/src/: lib.rs
crates/jugar/tests/: e2e.rs
crates/physics-toy-sandbox/: Cargo.toml
crates/physics-toy-sandbox/src/: contraption.rs  lib.rs  material.rs  remix.rs  thermometer.rs
crates/physics-toy-sandbox/tests/: probar_sandbox.rs  proptest_sandbox.rs
deploy/: .env.example  .gitignore
docs/: AI_REPRODUCIBILITY.md  BENCHMARKS.md  jugar-spec.md
docs/book/: coverage-tooling.md
docs/qa/: 100-point-qa-checklist-jugar-probar-report.md  100point-usability-game-design-playwright-qa-checklist.md  checklist-final-release.md  game-replay-testing.md  pong-game-100point-ux-improvement-game-design.md  prepare-release-100point-ux-demo-checklist.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: Physics-Toy-Sandbox-remix-demo.md  eli5-yaml-first-spec.md  pong-ai-design.md  pong-improvements-demo-spec.md  probar-wasm-testing-spec.md  qa-001-spec.md  refactor-001-spec.md  renacer-tracing-game-replay.md
examples/physics_sandbox_demo/: Cargo.toml  index.html  main.rs
examples/physics_sandbox_demo/pkg/: physics_sandbox_demo.d.ts  physics_sandbox_demo.js  physics_sandbox_demo_bg.wasm.d.ts
examples/pong-web/: deno.json  index.html  jugar_web.d.ts  jugar_web.js  jugar_web_bg.wasm.d.ts  package-lock.json  package.json  playwright.config.ts
examples/pong-web/assets/: pong-ai-v1.apr
examples/pong-web/tests/: pong.spec.ts
examples/universal_pong/: Cargo.toml
examples/universal_pong/src/: main.rs
templates/: index.yaml
tests/: integration.rs
