[package]
name = "jugar-ai"
description = "AI systems for Jugar using Aprender backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
jugar-core = { version = "0.1", path = "../jugar-core" }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
