[package]
name = "jugar-input"
description = "Unified input handling for touch, mouse, and gamepad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
jugar-core = { path = "../jugar-core" }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
