[package]
name = "jugar-probar"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
description = "Probar: Rust-native testing framework for WASM games"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/jugar"
keywords = ["testing", "wasm", "games", "browser"]
categories = ["development-tools::testing", "wasm"]

[features]
default = []
# Enable real browser control (requires chromium)
browser = ["chromiumoxide", "tokio", "futures"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }

# Optional CDP browser control
chromiumoxide = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
