[package]
name = "jugar"
description = "WASM-native universal game engine - entry point"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
jugar-core = { version = "0.1", path = "../jugar-core" }
jugar-physics = { version = "0.1", path = "../jugar-physics" }
jugar-ai = { version = "0.1", path = "../jugar-ai" }
jugar-render = { version = "0.1", path = "../jugar-render" }
jugar-ui = { version = "0.1", path = "../jugar-ui" }
jugar-input = { version = "0.1", path = "../jugar-input" }
jugar-audio = { version = "0.1", path = "../jugar-audio" }
jugar-procgen = { version = "0.1", path = "../jugar-procgen" }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
