[package]
name = "physics-toy-sandbox"
description = "Remixable physics playground - Rube Goldberg machine builder for Jugar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["physics", "sandbox", "wasm", "game", "remix"]
categories = ["game-engines", "simulation", "wasm"]

[features]
default = []
## Enable jugar-probar test runner introspection hooks
jugar-probar = ["dep:jugar-probar"]
## Enable WASM target with web-sys bindings
wasm = ["web-sys", "wasm-bindgen"]

[dependencies]
# Jugar engine crates
jugar-core = { version = "0.1", path = "../jugar-core" }
jugar-physics = { version = "0.1", path = "../jugar-physics" }
jugar-ui = { version = "0.1", path = "../jugar-ui" }
jugar-input = { version = "0.1", path = "../jugar-input" }

# Optional: jugar-probar testing framework
jugar-probar = { workspace = true, optional = true }

# Math and linear algebra
glam = { workspace = true }

# Serialization (for remix save/load)
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# UUID for contraption IDs
uuid = { workspace = true }

# Semantic versioning for engine compatibility (Jidoka)
semver = { version = "1.0", features = ["serde"] }

# CRC32 for content hashing
crc32fast = { workspace = true }

# WASM bindings (optional)
web-sys = { workspace = true, optional = true, features = ["Performance", "Window"] }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
jugar-probar = { workspace = true }

[lints]
workspace = true
