[package]
name = "physics-sandbox-demo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "main.rs"

[dependencies]
physics-toy-sandbox = { path = "../../crates/physics-toy-sandbox" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
glam = { version = "0.29", features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
